--- a/src/app/header-new/header-new.component.html
+++ b/src/app/header-new/header-new.component.html
@@ -4,6 +4,6 @@
       <img src="assets/logo.png" alt="Logo" width="100%">
   </div>
         <h1 class="header-title">{{ pageTitle }}</h1> <!-- ✅ Centered Title -->
-      <div class="menu-icon">&#9776;</div> <!-- ✅ Menu Icon -->
+      <!-- <div class="menu-icon">&#9776;</div> ✅ Menu Icon -->
   </div>
 </header>
