--- a/src/app/mitav/mitav-summary/mitav-summary.component.html
+++ b/src/app/mitav/mitav-summary/mitav-summary.component.html
@@ -163,6 +163,95 @@
   
   </table>
   
+  <h2 class="table-title">5. מספר מאושפזים לפי קבוצת גיל ומשך האשפוז</h2>
+
+  <table mat-table [dataSource]="hospitalizationTableData" class="mat-elevation-z8" dir="rtl">
+  
+    <!-- First Header Row (Grouped Headers) -->
+    <ng-container matColumnDef="header-row-group4">
+      <th mat-header-cell *matHeaderCellDef [attr.colspan]="1" class="group-header"> אוכלוסיית מאושפזים </th>
+    </ng-container>
+  
+    <ng-container matColumnDef="header-row-group1">
+      <th mat-header-cell *matHeaderCellDef [attr.colspan]="3" class="group-header"> סה"כ מאושפזים 65+ במחלקות פנימיות וכירורגיות (יעד 2) </th>
+    </ng-container>
+  
+    <ng-container matColumnDef="header-row-group2">
+      <th mat-header-cell *matHeaderCellDef [attr.colspan]="3" class="group-header"> מאושפזים בגיל 65+ בכלל המחלקות המשתתפות בתכנית הליכה </th>
+    </ng-container>
+  
+    <ng-container matColumnDef="header-row-group3">
+      <th mat-header-cell *matHeaderCellDef [attr.colspan]="3" class="group-header"> סה"כ המאושפזים בגיל 65+ שהשתתפו בתכנית הליכה (יעד 1) </th>
+    </ng-container>
+  
+    <!-- Second Header Row (Columns) -->
+    <ng-container matColumnDef="ageGroup">
+      <th mat-header-cell *matHeaderCellDef> גיל / משך אשפוז </th>
+      <td mat-cell *matCellDef="let row"> {{ row.ageGroup }} </td>
+    </ng-container>
+  
+    <!-- Internal Departments -->
+    <ng-container matColumnDef="internal3Days">
+      <th mat-header-cell *matHeaderCellDef> עד 3 ימים </th>
+      <td mat-cell *matCellDef="let row"> {{ row.internal3Days }} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="internal4to5Days">
+      <th mat-header-cell *matHeaderCellDef> 4-5 ימים </th>
+      <td mat-cell *matCellDef="let row"> {{ row.internal4to5Days }} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="internal6PlusDays">
+      <th mat-header-cell *matHeaderCellDef> 6 ימים ומעלה </th>
+      <td mat-cell *matCellDef="let row"> {{ row.internal6PlusDays }} </td>
+    </ng-container>
+  
+    <!-- Walking Program -->
+    <ng-container matColumnDef="walking3Days">
+      <th mat-header-cell *matHeaderCellDef> עד 3 ימים </th>
+      <td mat-cell *matCellDef="let row"> {{ row.walking3Days }} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="walking4to5Days">
+      <th mat-header-cell *matHeaderCellDef> 4-5 ימים </th>
+      <td mat-cell *matCellDef="let row"> {{ row.walking4to5Days }} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="walking6PlusDays">
+      <th mat-header-cell *matHeaderCellDef> 6 ימים ומעלה </th>
+      <td mat-cell *matCellDef="let row"> {{ row.walking6PlusDays }} </td>
+    </ng-container>
+  
+    <!-- Achieved 70% -->
+    <ng-container matColumnDef="achieved3Days">
+      <th mat-header-cell *matHeaderCellDef> עד 3 ימים </th>
+      <td mat-cell *matCellDef="let row"> {{ row.achieved3Days }} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="achieved4to5Days">
+      <th mat-header-cell *matHeaderCellDef> 4-5 ימים </th>
+      <td mat-cell *matCellDef="let row"> {{ row.achieved4to5Days }} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="achieved6PlusDays">
+      <th mat-header-cell *matHeaderCellDef> 6 ימים ומעלה </th>
+      <td mat-cell *matCellDef="let row"> {{ row.achieved6PlusDays }} </td>
+    </ng-container>
+  
+    <!-- First Row: Grouped Headers -->
+    <tr mat-header-row *matHeaderRowDef="['header-row-group4', 'header-row-group1', 'header-row-group2', 'header-row-group3']"></tr>
+  
+    <!-- Second Row: Column Headers -->
+    <tr mat-header-row *matHeaderRowDef="['ageGroup', 'internal3Days', 'internal4to5Days', 'internal6PlusDays',
+                                           'walking3Days', 'walking4to5Days', 'walking6PlusDays',
+                                           'achieved3Days', 'achieved4to5Days', 'achieved6PlusDays']"></tr>
+  
+    <!-- Data Rows -->
+    <tr mat-row *matRowDef="let row; columns: ['ageGroup', 'internal3Days', 'internal4to5Days', 'internal6PlusDays',
+                                               'walking3Days', 'walking4to5Days', 'walking6PlusDays',
+                                               'achieved3Days', 'achieved4to5Days', 'achieved6PlusDays'];"></tr>
+  
+  </table>
   
 
 
