--- a/src/app/header-new/header-new.component.html
+++ b/src/app/header-new/header-new.component.html
@@ -1,8 +1,10 @@
 <header class="header">
   <div class="header-container">
     <div id="logo">
-      <img src="assets/logo.png" alt="Logo" width="100%">
-  </div>
+      <a href="http://srv-apps-prod/app/#/dashboard">
+        <img src="assets/logo.png" alt="Logo" width="100%">
+      </a>
+    </div>
         <h1 class="header-title">{{ pageTitle }}</h1> <!-- ✅ Centered Title -->
       <!-- <div class="menu-icon">&#9776;</div> ✅ Menu Icon -->
   </div>
