--- a/src/app/mitav/mitav-summary/mitav-summary.component.html
+++ b/src/app/mitav/mitav-summary/mitav-summary.component.html
@@ -253,7 +253,44 @@
   
   </table>
   
-
+  <div class="table-wrapper">
+    <h2 class="table-title">6. פרמטר ניידות בקבלה</h2>
+  
+    <table mat-table [dataSource]="mobilityAdmissionTableData" class="mat-elevation-z8" dir="rtl">
+      
+      <!-- Mobility Parameter Column -->
+      <ng-container matColumnDef="parameter">
+        <th mat-header-cell *matHeaderCellDef> פרמטר ניידות / אוכלוסיית מאושפזים </th>
+        <td mat-cell *matCellDef="let row"> {{ row.parameter }} </td>
+      </ng-container>
+  
+      <!-- Internal and Surgical Departments Column -->
+      <ng-container matColumnDef="internalAndSurgical">
+        <th mat-header-cell *matHeaderCellDef> סה"כ מאושפזים בגיל 65+ במחלקות פנימיות וכירורגיות (יעד 2) </th>
+        <td mat-cell *matCellDef="let row"> {{ row.internalAndSurgical }} </td>
+      </ng-container>
+  
+      <!-- Walking Program Column -->
+      <ng-container matColumnDef="walkingProgram">
+        <th mat-header-cell *matHeaderCellDef> מאושפזים בגיל 65+ בכלל המחלקות המשתתפות בתכנית הליכה </th>
+        <td mat-cell *matCellDef="let row"> {{ row.walkingProgram }} </td>
+      </ng-container>
+  
+      <!-- Walking Program Achieved 70% Column -->
+      <ng-container matColumnDef="walkingProgramAchieved70">
+        <th mat-header-cell *matHeaderCellDef> סה"כ המאושפזים בגיל 65+ שהשתתפו בתכנית הליכה (יעד 1) </th>
+        <td mat-cell *matCellDef="let row"> {{ row.walkingProgramAchieved70 }} </td>
+      </ng-container>
+  
+      <!-- Headers -->
+      <tr mat-header-row *matHeaderRowDef="['parameter', 'internalAndSurgical', 'walkingProgram', 'walkingProgramAchieved70']"></tr>
+  
+      <!-- Data Rows -->
+      <tr mat-row *matRowDef="let row; columns: ['parameter', 'internalAndSurgical', 'walkingProgram', 'walkingProgramAchieved70'];"></tr>
+  
+    </table>
+  </div>
+  
 
   </div>
   
