--- a/src/app/mitav/mitav-summary/mitav-summary.component.html
+++ b/src/app/mitav/mitav-summary/mitav-summary.component.html
@@ -351,6 +351,31 @@
   <tr mat-row *matRowDef="let row; columns: ['parameter', 'internalAndSurgical', 'walkingProgram', 'walkingProgramAchieved70'];"></tr>
 
 </table>
+<h3>9. פרמטר הניידות כפי שדיווח המטופל או משפחתו</h3>
+<table mat-table [dataSource]="mobilityBasicFunctionTableData" class="mat-elevation-z8" dir="rtl">
+  <ng-container matColumnDef="parameter">
+    <th mat-header-cell *matHeaderCellDef> פרמטר ניידות / אוכלוסיית מאושפזים </th>
+    <td mat-cell *matCellDef="let row"> {{ row.parameter }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="internalAndSurgical">
+    <th mat-header-cell *matHeaderCellDef> סה"כ מאושפזים בני 65+ במחלקות פנימיות וכירורגיות (יעד 2) </th>
+    <td mat-cell *matCellDef="let row"> {{ row.internalAndSurgical }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="walkingProgram">
+    <th mat-header-cell *matHeaderCellDef> מאושפזים בגיל 65+ בכלל המחלקות המשתתפות בתכנית הליכה </th>
+    <td mat-cell *matCellDef="let row"> {{ row.walkingProgram }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="walkingProgramAchieved70">
+    <th mat-header-cell *matHeaderCellDef> סה"כ המאושפזים בגיל 65 + שהשתתפו בתכנית הליכה (יעד 1) </th>
+    <td mat-cell *matCellDef="let row"> {{ row.walkingProgramAchieved70 }} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="['parameter', 'internalAndSurgical', 'walkingProgram', 'walkingProgramAchieved70']"></tr>
+  <tr mat-row *matRowDef="let row; columns: ['parameter', 'internalAndSurgical', 'walkingProgram', 'walkingProgramAchieved70'];"></tr>
+</table>
 
 
   </div>
