--- a/src/app/mitav/mitav-summary/mitav-summary.component.html
+++ b/src/app/mitav/mitav-summary/mitav-summary.component.html
@@ -351,7 +351,7 @@
   <tr mat-row *matRowDef="let row; columns: ['parameter', 'internalAndSurgical', 'walkingProgram', 'walkingProgramAchieved70'];"></tr>
 
 </table>
-<h3>9. פרמטר הניידות כפי שדיווח המטופל או משפחתו</h3>
+<h2 class="table-title">9. פרמטר הניידות כפי שדיווח המטופל או משפחתו</h2>
 <table mat-table [dataSource]="mobilityBasicFunctionTableData" class="mat-elevation-z8" dir="rtl">
   <ng-container matColumnDef="parameter">
     <th mat-header-cell *matHeaderCellDef> פרמטר ניידות / אוכלוסיית מאושפזים </th>
