--- a/src/app/mitav/mitav-summary/mitav-summary.component.html
+++ b/src/app/mitav/mitav-summary/mitav-summary.component.html
@@ -4,23 +4,22 @@
   <mat-card class="filter-card" dir="rtl">
     <mat-card-content class="filters">
       <div class="filter-fields">
-        <mat-form-field appearance="outline">
+        <mat-form-field>
           <mat-label>שנה</mat-label>
-          <mat-select [(ngModel)]="selectedYear" (selectionChange)="applyFilter()">
-            <mat-option *ngFor="let y of availableYears" [value]="y">{{ y }}</mat-option>
+          <mat-select [(value)]="selectedYear" (selectionChange)="onYearChange(); applyFilter()">
+            <mat-option *ngFor="let y of availableYears" [value]="y.value">{{ y.label }}</mat-option>
           </mat-select>
         </mat-form-field>
-  
-        <mat-form-field appearance="outline">
+        
+        <mat-form-field>
           <mat-label>רבעון</mat-label>
-          <mat-select [(ngModel)]="selectedQuarter" (selectionChange)="applyFilter()">
-            <mat-option *ngFor="let q of quarters" [value]="q.value">{{ q.label }}</mat-option>
+          <mat-select [(value)]="selectedQuarter" (selectionChange)="applyFilter()">
+            <mat-option *ngFor="let q of availableQuarters" [value]="q.value">{{ q.label }}</mat-option>
           </mat-select>
         </mat-form-field>
-  
-        <button mat-raised-button color="primary" (click)="exportAllTables()">
-          יצוא לאקסל
-        </button>
+       
+        <img src="../../assets/excel.png" alt="Download" (click)="exportAllTables()" class="download-icon icon" width="50px" style="margin-right: 10px;" />
+
       </div>
     </mat-card-content>
   </mat-card>
