--- a/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
+++ b/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
@@ -131,11 +131,12 @@ class="custom-toggle-group"
             [foregroundColor]="'#00c0ef'"
           ></ngx-gauge>
           <div class="gauge-info">
-            סה"כ מטופלים: <strong>{{ InsulinDataSource.data.length }}</strong>
-            מתוך <strong>{{ globalSourceTableFilter === 'מאושפזים' ? NullReleaseDateCount : NonNullReleaseDateCount }}</strong>
+            סה"כ מקבלי אינסולין: <strong>{{ InsulinDataSource.data.length }}</strong>
+            מתוך <strong>{{ sugerAbove180.data.length }}</strong>
           </div>
         </div>
       </mat-card>
+      
       <!-- Lab Results Over 180 Percentage Card -->
   
 <mat-card class="gauge-card">
@@ -175,11 +176,11 @@ class="custom-toggle-group"
   </div>
 </mat-card>
 
-      <!-- Gauge for סוכר 180 וחולה סוכרת -->
+      <!-- Gauge for סוכר 180 ת -->
 <mat-card class="gauge-card">
-  <div class="gauge-title">סוכר 180 וחולה סוכרת
+  <div class="gauge-title">סוכר 180  
     <span 
-          matTooltip="    מונה: סך מטופלים עם סכרת מעל 180 | מכנה: סך מטופלים עם אבחנת סכרת ב ICD9"
+          matTooltip="    מונה: סך מטופלים עם סכרת מעל 180 | מכנה: כלל המטופלים – מטופלים עם אבחנהב "
  
           matTooltipPosition="above"
           style="cursor: pointer; font-size: 16px; margin-left: 5px;"
@@ -191,23 +192,38 @@ class="custom-toggle-group"
   
   <div class="gauge-content">
     <ngx-gauge
-      [value]="sugar180DiabetesPercentage"
-      [min]="0"
-      [max]="100"
-      [label]=""
-      [append]="'%'"
-      [foregroundColor]="'#e74c3c'"
-    ></ngx-gauge>
-    <div class="gauge-info">
-   
-      <strong>{{ sugerAbove180.data.length }}</strong> מתוך
-      <strong>{{ DiagnosisICD9dataSource.data.length }} </strong>
-    </div>
+    [value]="sugar180AllPercentage"
+    [min]="0"
+    [max]="100"
+    [label]="''"
+    [append]="'%'"
+    [foregroundColor]="'#e74c3c'">
+  </ngx-gauge>
+  <div class="gauge-info">
+    סה"כ מטופלים:<strong>{{ sugerAbove180.data.length }}</strong> 
+    מתוך <strong>{{ globalSourceTableFilter === 'מאושפזים' ? NullReleaseDateCount : NonNullReleaseDateCount }} </strong>
+  </div>
   </div>
 </mat-card>
-
+  <mat-card class="gauge-card">
+    <div class="gauge-title">ללא אינסולין - סוכר מעל 180</div>
+    <div class="gauge-content">
+      <ngx-gauge
+        [value]="labResultsWithoutInsulinPercentage"
+        [min]="0"
+        [max]="100"
+        [label]=""
+        [append]="'%'"
+        [foregroundColor]="'#f39c12'">
+      </ngx-gauge>
+      <div class="gauge-info">
+        סה"כ מטופלים: <strong>{{ LabResultsWithoutInsulinDataSource.data.length }}</strong>
+        מתוך <strong>{{ sugerAbove180.data.length }}</strong>
+      </div>
+    </div>
+  </mat-card>
 <!-- Gauge for סוכר 70 וחולה סוכרת -->
-<mat-card class="gauge-card">
+<!-- <mat-card class="gauge-card">
   <div class="gauge-title">סוכר 70 וחולה סוכרת</div>
   <div class="gauge-content">
     <ngx-gauge
@@ -224,7 +240,7 @@ class="custom-toggle-group"
       <strong>{{ dataSourceBelow70.data.length }}</strong>
     </div>
   </div>
-</mat-card>
+</mat-card> -->
 <mat-card class="gauge-card">
   <div class="gauge-title">
     אומדן רגל סוכרתית
@@ -879,6 +895,45 @@ class="custom-toggle-group"
           showFirstLastButtons
         ></mat-paginator>
       </mat-tab>
+      <mat-tab label="ללא אינסולין סוכר מעל 180">
+        <table mat-table [dataSource]="LabResultsWithoutInsulinDataSource" matSort>
+          <ng-container matColumnDef="Admission_No">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר אשפוז</th>
+            <td mat-cell *matCellDef="let element">{{ element.Admission_No }}</td>
+          </ng-container>
+          <ng-container matColumnDef="Admission_Date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך קבלה</th>
+            <td mat-cell *matCellDef="let element">{{ element.Admission_Date | date }}</td>
+          </ng-container>
+          <ng-container matColumnDef="First_Name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>שם פרטי</th>
+            <td mat-cell *matCellDef="let element">{{ element.First_Name }}</td>
+          </ng-container>
+          <ng-container matColumnDef="Last_Name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>שם משפחה</th>
+            <td mat-cell *matCellDef="let element">{{ element.Last_Name }}</td>
+          </ng-container>
+          <ng-container matColumnDef="Count_Above_180_Less_48h">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>מדידות מעל 180 ב-48 שעות</th>
+            <td mat-cell *matCellDef="let element">{{ element.Count_Above_180_Less_48h }}</td>
+          </ng-container>
+          <ng-container matColumnDef="Release_Date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך שחרור</th>
+            <td mat-cell *matCellDef="let element">{{ element.Release_Date | date }}</td>
+          </ng-container>
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumnsLabResultsWithoutInsulin"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumnsLabResultsWithoutInsulin;"></tr>
+        </table>
+      
+        <mat-paginator
+          #paginatorWithoutInsulin
+          [pageSizeOptions]="[5, 10, 20]"
+          showFirstLastButtons>
+        </mat-paginator>
+      </mat-tab>
+      
+    
     </mat-tab-group>
   </div>
 </div>
