--- a/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
+++ b/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
@@ -1,4 +1,6 @@
-<div class="body">
+<!-- <app-spinner [isLoading]="isLoading"></app-spinner> -->
+
+<div   class="body">
   <!-- Title Section -->
   <div class="nine">
     <h1>
@@ -267,8 +269,9 @@ class="custom-toggle-group"
       [foregroundColor]="'#3498db'">
     </ngx-gauge>
     <div class="gauge-info">
-      <strong>{{ PatientWithICD9AndDontHaveDiabetesEstimationDataSource.data.length }}</strong> /
       <strong>{{ DiagnosisICD9dataSource.data.length }}</strong>
+      /<strong>{{ PatientWithICD9AndDontHaveDiabetesEstimationDataSource.data.length }}</strong> 
+   
     </div>
   </div>
   
@@ -473,8 +476,13 @@ class="custom-toggle-group"
             <td mat-cell *matCellDef="let element">{{ element.UnitName }}</td>
           </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="sugerAbove180Columns"></tr>
-          <tr mat-row *matRowDef="let row; columns: sugerAbove180Columns"></tr>
+          <tr 
+          mat-row 
+          *matRowDef="let row; columns: sugerAbove180Columns" 
+          (click)="openDialog(row)"
+          style="cursor: pointer;">
+        </tr>
+                 
         </table>
         <mat-paginator
           #paginator1
